fix: List.of() -> Arrays.asList() for Java 8 compat, fix import order